@@ -33,6 +33,12 @@ Only show processes whose name contains \fI<name>\fR,
 even if they are not bound to any specific part of the machine.
 This is not supported on all operating systems.
 .TP
+\fB\--uid <uid>\fR
+Only show processes of the user whose UID is \fI<uid>\fR,
+or processes of all users if \fIall\fR is given.
+By default, only processes of the current user are displayed.
+This is currently only supported on Linux.
+.TP
 \fB\-p\fR \fB\-\-physical\fR
 Report OS/physical indexes instead of logical indexes
 .TP
